[package]
name = "benchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "*", features = ["tokio-comp"] }
bb8 = "*"
bb8-redis = { version = "0.13.1" }
tokio = { version = "1.0", features = ["full"] }
